--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ python:
   - "3.7"
 
 script:
-  pip install -r requirements.txt
-  python3 -m unittest discover
-  virtualenv -p python3 calc_env
-  source calc_env/bin/activate
-  python3 setup.py install
+  pip install -r requirements.txt;
+  python3 -m unittest discover;
+  virtualenv -p python3 calc_env;
+  source calc_env/bin/activate;
+  python3 setup.py install;
   python3 tests/calculator.py
