--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ python:
   - "3.7"
 
 script:
-  python3 -m unittest discover;  
+  python3 -m unittest discover;
   python3 setup.py install;
-  python3 tests/calculator.py
+  python3 calculator.py
